@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1994] using /proc/sys instead of the deprecated sysctl() on Linux (asaveljevs)
  - [ZBXNEXT-236] added support of comma delimited list of host groups in aggregate checks (Sasha)
  - [ZBXNEXT-236] added support of item keys with brackets ("") in aggregate checks (Sasha)
  - [ZBXNEXT-236] added support of arrays in item key parameters (Sasha)
